--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>Waist</td>
+				<th>Waist</th>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -29,7 +29,7 @@
 				<td>32</td>
 			</tr>			
 			 <tr>
-				<td>Chest</td>
+				<th>Chest</th>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -37,7 +37,7 @@
 				<td>41</td>
 			</tr> 
 			 <tr>
-				<td>Sleeve</td>
+				<th>Sleeve</th>
 				<td>23</td>
 				<td>24</td>
 				<td>24</td>
