--- a/main.html
+++ b/main.html
@@ -45,10 +45,8 @@
 				<td>25</td>
 			</tr>
 	</tbody>
-	
     <script type="text/javascript" src="./script.js">
-</script>
-
+	</script>
 </body>
-
+</html>
 </html>
